--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
         </header>
 
         <div class="row container">
-
+            <div class="hero-content-wrap">
+                <h1 class="title primary-title">Your Place To Talk</h1>
+                <p class="hero-description">Whether you’re part of a school club, gaming group, worldwide art community, or just a handful of friends that want to spend time together, Discord makes it easy to talk every day and hang out more often.
+                </p>
+                
+            </div>
         </div>
-        
+
     </section>
 
 
