primary content added to index

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                         <a href="#" class="nav-link">Safety</a>
                     </li>
                 </ul>
+
+                <div class="nav-items-right">
+                    <a href="#" class="btn btn-small btn-light btn-login">Login</a>
+                    <span class="mobile-toggle">
+                        <i class="bx bx-menu"></i>
+                        <i class="bx bx-x"></i>
+                    </span>
+                </div>
             </nav>
         </header>
 
@@ -41,7 +49,15 @@
                 <h1 class="title primary-title">Your Place To Talk</h1>
                 <p class="hero-description">Whether you’re part of a school club, gaming group, worldwide art community, or just a handful of friends that want to spend time together, Discord makes it easy to talk every day and hang out more often.
                 </p>
-                
+                <div class="hero-btn-group">
+                    <a href="#" class="btn btn-large bytn-light">
+                        <i class="bx bx-download">Download for Windows</i>
+                    </a>
+                    <a href="#" class="btn btn-large btn-dark">
+                        Open Discord in your Browser
+                    </a>
+
+                </div>
             </div>
         </div>
 
