basic header styling

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Discord</title>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="/image/flag.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="./image/flag.png">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
@@ -14,7 +14,7 @@
         <header class="main-header container">
             <nav class="main-nav">
                 <a href="index.html" class="logo">
-                    <img src="/image/logo.svg" alt="logo">
+                    <img src="./image/logo.svg" alt="logo">
                 </a>
                 <ul class="nav-list">
                     <li class="nav-item">
