--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="nav-items-right">
                     <a href="#" class="btn btn-small btn-light btn-login">Login</a>
                     <span class="mobile-toggle">
-                        <i class="bx bx-menu"></i>
-                        <i class="bx bx-x"></i>
+                        <i class="bx bx-menu btn-open"></i>
+                        <i class="bx bx-x btn-close"></i>
                     </span>
                 </div>
             </nav>
@@ -50,7 +50,7 @@
                 <p class="hero-description">Whether you’re part of a school club, gaming group, worldwide art community, or just a handful of friends that want to spend time together, Discord makes it easy to talk every day and hang out more often.
                 </p>
                 <div class="hero-btn-group">
-                    <a href="#" class="btn btn-large bytn-light">
+                    <a href="#" class="btn btn-large btn-light">
                         <i class="bx bx-download">Download for Windows</i>
                     </a>
                     <a href="#" class="btn btn-large btn-dark">
