--- a/index.html
+++ b/index.html
@@ -94,12 +94,28 @@
 
 <section class="moderation-tools">
     <div class="row container">
-        <img src="./image/section-2.svg" alt="" class="grid-image order-2">
+        <img src="./image/section-3.svg" alt="" class="grid-image order-2">
         <div class="text-group order-1">
-            <h2 class="title secondary-title">Where hanging out is easy</h2>
-            <p>Grab a seat in a voice channel when you’re free. Friends in your server can see you’re around and instantly pop in to talk without having to call.</p>
+            <h2 class="title secondary-title">From a few to a fandom</h2>
+            <p>Get a community of any size running with moderation tools and custom member access. Give members special powers, set up private channels, and more.</p>
         </div>
     </div>
 </section>
+
+
+<svg class="wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none">
+    <path class="wave-path" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path>
+ </svg>
+ 
+ <section class="video-call">
+     <div class="row container">
+         <div class="text-group">
+            <h2 class="title secondary-title">Reliable tech for staying close</h2>
+            <p>Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
+         </div>
+         <img src="./image/section-4.svg" alt="" class="grid-image">
+     </div>
+ </section>
+
 </body>
 </html>
