download section styles added

--- a/index.html
+++ b/index.html
@@ -117,5 +117,16 @@
      </div>
  </section>
 
+
+ <section class="download">
+     <div class="row container remove-grid">
+        <img src="/image/sparkles.svg" alt="" class="sparkles">
+        <h2>Ready to start your journey</h2>
+        <a href="#" class="btn btn-large btn-brand">
+            <i class="bx bx-download"></i>Download for Windows
+        </a>
+     </div>
+ </section>
+
 </body>
 </html>
