--- a/index.html
+++ b/index.html
@@ -128,5 +128,93 @@
      </div>
  </section>
 
+ <footer class="main-footer">
+
+     <div class="row container">
+
+        <div class="info-box">
+
+            <h4 class="footer-title">Your Place To talk</h4>
+
+            <div class="langauges">
+                <img src="/image/flag.png" alt="">
+                <span>English, USA</span> <i class="bx bx-chevron-down"></i>
+            </div>
+
+            <div class="social-media">
+               <a href="#" class="smlink">
+                   <i class="bx bxl-facebook"></i>
+               </a>
+               <a href="#" class="smlink">
+                   <i class="bx bxl-twitter"></i>
+               </a>
+               <a href="#" class="smlink">
+                   <i class="bx bxl-youtube"></i>
+               </a>
+               <a href="#" class="smlink">
+                   <i class="bx bxl-instagram"></i>
+               </a>
+            </div>
+
+        </div>
+
+        <div class="spacer"></div>
+
+                <div class="footer-links-group">
+                    <h5 class="footer-title">Product</h5>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Why Discord</a>
+                    <a href="#" class="footer-link">College</a>
+                    <a href="#" class="footer-link">Inspiration</a>
+                    <a href="#" class="footer-link">Nitro</a>
+                    <a href="#" class="footer-link">Status</a>
+                </div>
+   
+            <div class="footer-links-group">
+                <h5 class="footer-title">Company</h5>
+                <a href="#" class="footer-link">About</a>
+                <a href="#" class="footer-link">JObs</a>
+                <a href="#" class="footer-link">Branding</a>
+                <a href="#" class="footer-link">Newsroom</a>
+                <a href="#" class="footer-link">Store</a>
+            </div>
+
+            <div class="footer-links-group">
+                <h5 class="footer-title">Resources</h5>
+                <a href="#" class="footer-link">Blog</a>
+                <a href="#" class="footer-link">Partners</a>
+                <a href="#" class="footer-link">Developers</a>
+                <a href="#" class="footer-link">StreamKit</a>
+                <a href="#" class="footer-link">Support</a>
+                <a href="#" class="footer-link">safety</a>
+                <a href="#" class="footer-link">Verification</a>
+                <a href="#" class="footer-link">Open SOurce</a>
+                <a href="#" class="footer-link">Security</a>
+                <a href="#" class="footer-link">Moderation</a>
+                <a href="#" class="footer-link">Feedback</a>
+            </div>
+
+            <div class="footer-links-group">
+                <h5 class="footer-title">Polcies</h5>
+                <a href="#" class="footer-link">Terms</a>
+                <a href="#" class="footer-link">Privacy</a>
+                <a href="#" class="footer-link">Guidelines</a>
+                <a href="#" class="footer-link">Acknowledgements</a>
+                <a href="#" class="footer-link">Licenses</a>
+            </div>
+
+
+            <div class="divider"></div>
+     </div>
+
+     <div class="row container remove-grid">
+         <a href="#" class="logo">
+             <img src="/image/logo.svg" alt="">
+         </a>
+         <a href="" class="btn btn-small btn-brand">Open</a>
+     </div>
+    
+ </footer>
+
 </body>
 </html>
