break point added

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
 <section class="moderation-tools">
     <div class="row container">
-        <img src="./image/section-3.svg" alt="" class="grid-image order-2">
-        <div class="text-group order-1">
+        <img src="./image/section-3.svg" alt="" class="grid-image">
+        <div class="text-group">
             <h2 class="title secondary-title">From a few to a fandom</h2>
             <p>Get a community of any size running with moderation tools and custom member access. Give members special powers, set up private channels, and more.</p>
         </div>
@@ -195,7 +195,7 @@
             </div>
 
             <div class="footer-links-group">
-                <h5 class="footer-title">Polcies</h5>
+                <h5 class="footer-title">Policies</h5>
                 <a href="#" class="footer-link">Terms</a>
                 <a href="#" class="footer-link">Privacy</a>
                 <a href="#" class="footer-link">Guidelines</a>
@@ -211,7 +211,7 @@
          <a href="#" class="logo">
              <img src="/image/logo.svg" alt="">
          </a>
-         <a href="" class="btn btn-small btn-brand">Open</a>
+         <a href="" class="btn btn-small btn-brand">Open discord</a>
      </div>
     
  </footer>
